<resources>
    <string name="app_name">源极风智能家居</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add">add_cate</string>
    <string name="action_share">share_action</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="email_register">邮箱注册</string>
    <string name="phone_register">手机号注册</string>
    <string name="delete_group">删除群组</string>
    <string name="reset_psw">重置密码</string>
    <string name="weibo">微博</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="conned">已连接</string>
    <string name="lamp">灯</string>
    <string name="chazuo">家居家装/智能插座</string>
    <string name="yaokong">遥控</string>
    <string name="hongwai">红外</string>
    <string name="menci">门窗感应器</string>
    <string name="changjing">场景</string>
    <string name="mianban">面板</string>
    <string name="yaokong_2">遥控2</string>
    <string name="auth_login">授权登录</string>
    <string name="running">源极风正在运行中</string>
    <string name="get_dev_from_cloud_failed">从云端获取数据失败</string>
    <string name="upload_dev_failed">同步数据到云端失败</string>
    <string name="login_account_hint">手机号</string>
    <string name="login_account_or_email">手机号/邮箱</string>
    <string name="login_psw_hint">密码</string>
    <string name="new_password">新密码</string>
    <string name="phone_no">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="forget_psw">忘记密码?</string>
    <string name="or_other_login">或第三方登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="weibo_login">微博登录</string>
    <string name="get_code">获取验证码</string>
    <string name="response_error">请求无响应，错误编码：</string>
    <string name="out_time">网络连接超时，请检查网络连接</string>
    <string name="no_internet">网络连接失败，请检查网络连接</string>
    <string name="parse_error">数据异常，解析失败</string>
    <string name="wait">请稍候..</string>
    <string name="please_phone_or_email">请输入手机号或邮箱号</string>
    <string name="please_legal_phone_or_email">请输入合法手机号或邮箱号</string>
    <string name="please_phone">请输入手机号</string>
    <string name="please_legal_phone">请输入合法手机号</string>
    <string name="get_code_success">获取验证码成功</string>
    <string name="yanzheng_code">验证码</string>
    <string name="blank_account_or_psw">请填写账号或密码</string>
    <string name="blank_account_or_psw_or_code">请填写手机号或邮箱、密码和验证码</string>
    <string name="peiwang_suc">配网成功!</string>
    <string name="peizhi_dev_suc">成功配置设备!</string>
    <string name="peiwang_fal">配网失败!</string>
    <string name="dev_no">设备数:</string>
    <string name="account_manage">账户管理</string>
    <string name="device_manage">设备管理</string>
    <string name="question">常见问题</string>
    <string name="about_us">关于我们</string>
    <string name="change_language">多语言</string>
    <string name="share">分享</string>
    <string name="zhuxiao">注销</string>
    <string name="change_psw">修改密码</string>
    <string name="old_psw">请输入原密码</string>
    <string name="new_psw">请输入新密码</string>
    <string name="confirm_psw">确认密码</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="edit_all">请填写完整！</string>
    <string name="psw_not_same">确认密码与新密码不一致！</string>
    <string name="psw_max_than_6">密码至少为6位数</string>
    <string name="change_psw_suc">修改密码成功</string>
    <string name="please_edit_phone">请输入你注册时填写的手机号</string>
    <string name="please_img_code">请输入图形验证码</string>
    <string name="navi_hint">在这里可以打开侧滑栏，里面有很多神奇的东西哦(｡◕ˇ∀ˇ◕）</string>
    <string name="fab_hint">点击这里，如果是在设备列表下可以添加设备，情景模式列表下可以添加情景模式(♥◠‿◠)ﾉ</string>
    <string name="add_device">添加设备</string>
    <string name="peiwanging">正在配网...</string>
    <string name="no_device">没有查询到任何设备，\n您可以点击右下角的添加按钮添加</string>
    <string name="no_group">您还没有添加任何分组，\n点击添加按钮添加一个试试</string>
    <string name="no_profiles">您还没有添加过情景模式，\n右下角添加按钮可以添加一个情景模式</string>
    <string name="reload">重新加载</string>
    <string name="load_failed">加载失败，</string>
    <string name="start_create_group">创建群组</string>
    <string name="inout_group_name">输入群组名</string>
    <string name="not_added_list">待选设备：</string>
    <string name="added_list">已选设备：</string>
    <string name="at_least_one">至少要选择一个设备哦</string>
    <string name="group_desc">群组描述(非必填)</string>
    <string name="choice_method">选择功能</string>
    <string name="set">设置</string>
    <string name="delete">删除</string>
    <string name="hint">温馨提示</string>
    <string name="sure_delete">你确定要删除该设备吗？</string>
    <string name="dev_cate">设备品类</string>
    <string name="share_auth">共享授权</string>
    <string name="dev_hardware">设备固件信息</string>
    <string name="dev_share_msg">设备共享信息</string>
    <string name="current_wifi">当前网络</string>
    <string name="dev_name">设备名</string>
    <string name="to_control">进入控制页面</string>
    <string name="delete_dev">删除设备</string>
    <string name="dev_not_exist">设备不存在</string>
    <string name="change_dev">修改设备名</string>
    <string name="change_dev_suc">修改设备名成功</string>
    <string name="send_suc">成功</string>
    <string name="send_failed">失败</string>
    <string name="delete_dev_suc">删除设备成功</string>
    <string name="delete_group_suc">删除群组成功</string>
    <string name="from_gallery">从相册中选择</string>
    <string name="from_camera">拍摄照片</string>
    <string name="no_sdcard">未找到SD卡，不能使用照片</string>
    <string name="choice_photo">选择头像</string>
    <string name="set_name">修改姓名</string>
    <string name="set_age">设置年龄</string>
    <string name="set_gender">设置性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="please_name">请输入姓名</string>
    <string name="please_uid">请Uid</string>
    <string name="no_user">无法获取到用户信息，请稍后再试</string>
    <string name="set_suc">操作成功</string>
    <string name="set_failed">操作失败</string>
    <string name="please_gender">请选择性别</string>
    <string name="years_old">岁</string>
    <string name="candidate_list">备选列表：</string>
    <string name="profile_tips">（您可以选择多个设备和多个操作方式）</string>
    <string name="input_profile_name">情景模式名</string>
    <string name="create_profile">创建情景模式</string>
    <string name="share_info">共享信息</string>
    <string name="dev_control">设备控制</string>
    <string name="chazuo_1">插座一：</string>
    <string name="chazuo_2">插座二：</string>
    <string name="chazuo_3">插座三：</string>
    <string name="chazuo_4">插座四：</string>
    <string name="dialog_message_group_item_pinned">Group item pinned! (group = %1$d)</string>
    <string name="dialog_message_child_item_pinned">Child item pinned! (group = %1$d, child = %2$d)</string>
    <string name="snack_bar_text_item_removed">1 item removed</string>
    <string name="snack_bar_text_group_item_removed">1 group item removed</string>
    <string name="snack_bar_text_child_item_removed">1 child item removed</string>
    <string name="snack_bar_text_button_clicked">Button clicked! (position = %1$d)</string>
    <string name="snack_bar_action_undo">UNDO</string>
    <string name="at_least_one_action">至少要添加一个操作指令哦</string>
    <string name="please_edit_profile_name">请输入情景模式名</string>
    <string name="empty_cmd">未添加任何操作指令</string>
    <string name="device_not_found">设备不存在</string>
    <string name="QR_title">我的二维码</string>
    <string name="QR_weiXin">微信</string>
    <string name="QR_wb">微博</string>
    <string name="QR_QQ">QQ</string>
    <string name="QR_Qzone">QQ空间</string>
    <string name="QR_wxcircle">朋友圈</string>
    <string name="QR_good">分享二维码的好处</string>
    <string name="can_not_save">未找到存储卡，无法存储图片！</string>
    <string name="share_suc">分享成功</string>
    <string name="share_err">分享错误</string>
    <string name="share_cancel">取消分享</string>
    <string name="diandong_str">点动模式</string>
    <string name="husuo_str">互锁模式</string>
    <string name="zidong_str">自锁模式</string>
    <string name="device_info">设备信息</string>
    <string name="share_owner">共享者：</string>
    <string name="share_device">授权该设备</string>
    <string name="shouquan_device">授权设备</string>
    <string name="share_dev_tips">授权设备给其他用户，需要扫描目标用户APP《我的二维码》里面的二维码，您也可以让目标用户将二维码图片发给你，识别二维码图片授权哦n(*≧▽≦*)n</string>
    <string name="scan_qr_code">扫描二维码</string>
    <string name="scan_failed">扫描二维码失败</string>
    <string name="not_allow_qr_code">您所扫描的二维码跟授权设备操作无关，是否选择在浏览器中访问该链接</string>
    <string name="my_code">我的二维码</string>
    <string name="clear_screen">清屏</string>
    <string name="company_name">源极风科技有限公司</string>
    <string name="company_url">http://yuanjifeng.iok.la:51400/HTML/html/index.html</string>
    <string name="company_info">成都源极风科技有限公司创建于2016年，是一家以智能家居，网站建设，办公平台，手机APP的技术服务商，集设计，开发于一体。 依靠科技求发展，不断为用户提供满意的产品，是我们始终不变的追求。已成功开发出智能插座，智能网关，智能遥控等一系列产品， 以一流的技术服务受到了用户的一致好评。公司员工奉行“进取 求实 严谨 团结”的方针，不断开拓创新，以技术为核心， 以质量为生命，奉用户为上帝，竭诚为您提供性价比最高的产品，以及无微不至的售后服务。
</string>
    <string name="about_us_introduce">公司网址：http://yuanjifeng.iok.la:51400/HTML/html/index.html \n 商务合作：18011442703 \n 合作伙伴：http://www.hekr.me/ \n 问题反馈： developerlzh@gmail.com</string>
    <string name="qrcode_hint">在设备主人将要把设备授权给你时，你可以让设备主人打开APP扫描这个二维码。您也可以将 "根目录/YuanStrom" 文件夹下的 MyQrCode.png 使用第三方APP发送给设备主人，他可以使用APP识别二维码图片授权给你</string>
    <string name="dev_name_maohao">设备名：</string>
    <string name="open">打开 </string>
    <string name="close">关闭 </string>
    <string name="first_jack">第一个插座</string>
    <string name="second_jack">第二个插座</string>
    <string name="third_jack">第三个插座</string>
    <string name="fourth_jack">第四个插座</string>
    <string name="action">执行操作：</string>
    <string name="now">正在</string>
    <string name="run_di">执行第</string>
    <string name="tiao_order">条指令</string>
    <string name="sure_delete_profile">确定要删除该情景模式吗？</string>
    <string name="clcik_again_exit">再按一次退出程序</string>
    <string name="long_click">tips:长按可以呼出操作列表哦</string>
    <string name="query_ing">查询中..</string>
    <string name="dev_offline">设备离线，发送操作指令将不会成功执行</string>
    <string name="dev_error">设备可能已经断开连接，请复位设备再试试</string>
    <string name="flow_system">跟随系统</string>
    <string name="zh">简体中文</string>
    <string name="en">English</string>
    <string name="code0">网络超时</string>
    <string name="code1">登录信息过期，请重新登录！</string>
    <string name="code2">未知错误！</string>
    <string name="code5200000">服务内部错误</string>
    <string name="code400016">操作过于频繁,请稍候再试</string>
    <string name="code400017">今日操作已达上限</string>
    <string name="code3400001">手机号码无效</string>
    <string name="code3400002">验证码错误</string>
    <string name="code3400003">验证码过期</string>
    <string name="code3400005">发送验证码次数过多</string>
    <string name="code3400006">无效的请求类型</string>
    <string name="code3400007">无效的旧密码</string>
    <string name="code3400008">用户已注册</string>
    <string name="code3400009">用户尚未验证</string>
    <string name="code3400010">账号或密码错误</string>
    <string name="code3400011">用户不存在</string>
    <string name="code3400012">无效的邮件token</string>
    <string name="code3400013">账户已认证</string>
    <string name="code3400014">账户已经关联了某个三方账号</string>
    <string name="code5400001">内部错误</string>
    <string name="code5400002">app重复登录</string>
    <string name="code5400003">appTid不能为空</string>
    <string name="code5400004">授权关系已存在</string>
    <string name="code5400005">授权关系不存在</string>
    <string name="code5400006">因网络原因绑定失败</string>
    <string name="code5400007">因超时原因绑定失败</string>
    <string name="code5400009">修改用户档案失败</string>
    <string name="code54000010">校验code失败</string>
    <string name="code54000011">设备授权次数达到上限</string>
    <string name="code54000012">因内部错误绑定失败</string>
    <string name="code54000013">因重复绑定绑定失败</string>
    <string name="code54000014">设备不属于用户</string>
    <string name="code54000015">没有这样的指令</string>
    <string name="code54000016">设备无法重复登录</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
</resources>