<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/account_manage">
        <menu>
            <item
                android:id="@+id/change_psw"
                android:icon="@mipmap/psw_icon"
                android:title="@string/change_psw" />
            <item android:id="@+id/my_code"
                android:icon="@mipmap/qrcode_icon"
                android:title="@string/my_code"/>
        </menu>

    </item>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/about_us"
            android:icon="@mipmap/about_icon"
            android:title="@string/about_us" />
        <item
            android:id="@+id/change_language"
            android:icon="@mipmap/change_language"
            android:title="@string/change_language" />
        <!--<item-->
            <!--android:id="@+id/nav_share"-->
            <!--android:icon="@mipmap/share_icon"-->
            <!--android:title="@string/share" />-->

        <item
            android:id="@+id/zhuxiao"
            android:icon="@mipmap/exit_icon"
            android:title="@string/zhuxiao" />
    </group>


    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
