<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/day_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="@color/time_color_selector" />

        <Space
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/day_selector"
            android:checked="true"
            android:button="@null"
            android:gravity="center"
            android:text="@string/monday"
            android:textColor="@color/time_color_selector" />

        <Space
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/day_selector"
            android:checked="true"
            android:button="@null"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textColor="@color/time_color_selector" />

        <Space
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/day_selector"
            android:checked="true"
            android:button="@null"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="@color/time_color_selector" />

        <Space
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/day_selector"
            android:checked="true"
            android:button="@null"
            android:gravity="center"
            android:text="@string/thursday"
            android:textColor="@color/time_color_selector" />

        <Space
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/day_selector"
            android:checked="true"
            android:button="@null"
            android:gravity="center"
            android:text="@string/friday"
            android:textColor="@color/time_color_selector" />

        <Space
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/day_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/saturday"
            android:textColor="@color/time_color_selector" />

    </LinearLayout>
</LinearLayout>