<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="17dip"
    android:paddingRight="11dip"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <EditText
            android:id="@+id/edit_old"
            android:layout_marginLeft="5dp"
            android:hint="@string/old_psw"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edit_new"
            android:layout_marginLeft="5dp"
            android:hint="@string/new_psw"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/confirm_new"
            android:layout_marginLeft="5dp"
            android:hint="@string/confirm_psw"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
