<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/home"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/white">

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_profile_name"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/input_profile_name"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/candidate_list"
        android:padding="8dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/device_list"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0.0dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        ></android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_tips"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        />
    <Button android:textAllCaps="false"
        android:id="@+id/create_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/ensure"
        android:textColor="@color/white"
        android:background="@drawable/login_btn_bg"/>
</LinearLayout>