<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- item开始-->
        <LinearLayout
            android:id="@+id/share_QQ"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            style="@style/linear.qr_linear">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/umeng_socialize_qq_on" />

            <TextView
                style="@style/qr_text"
                android:text="@string/QR_QQ" />
        </LinearLayout>
        <!-- item结束-->


        <!-- item开始-->
        <LinearLayout
            android:id="@+id/share_Qzone"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            style="@style/linear.qr_linear">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/umeng_socialize_qzone_on" />

            <TextView
                style="@style/qr_text"
                android:text="@string/QR_Qzone" />
        </LinearLayout>
        <!-- item结束-->


        <!-- item开始-->
        <LinearLayout
            android:id="@+id/share_weixin"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            style="@style/linear.qr_linear">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/umeng_socialize_wechat" />

            <TextView
                style="@style/qr_text"
                android:text="@string/QR_weiXin" />
        </LinearLayout>
        <!-- item结束-->


        <!-- item开始-->
        <LinearLayout
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/share_wxcircle"
            style="@style/linear.qr_linear">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/umeng_socialize_wxcircle" />

            <TextView
                style="@style/qr_text"
                android:text="@string/QR_wxcircle" />
        </LinearLayout>
        <!-- item结束-->
    </LinearLayout>
</LinearLayout>