<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@color/white">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_account"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:paddingLeft="10dp"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/login_account_hint"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:drawableLeft="@mipmap/account"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_psw"
            android:layout_width="0.0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:layout_centerHorizontal="true"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/login_psw_hint"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:drawableLeft="@mipmap/psw"
                />
        </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:visibility="gone"
                android:background="@drawable/login_btn_bg"/>

        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size"
            android:background="@drawable/login_btn_bg"/>

        <TextView
            android:id="@+id/forget_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/green_300"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/forget_psw"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0.0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/or_other_login"/>

            <View
                android:layout_width="0.0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:background="@color/gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/login_qq"
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_radius"
                    android:src="@drawable/qq_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qq_login"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/login_weibo"
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_radius"
                    android:src="@drawable/weibo_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weibo_login"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>